--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="script/style.css" ></style>
 </head>
 
 <body>
 </body>
 
-	<script src="script/layout.js"></script>
+	<script type="text/javascript" src="script/layout.js"></script>
 </html>
